--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                         <a target="_blank" rel="noopener noreferrer" href='https://www.kpytka.eu/CV.pdf' class="cv-button">
                             <i class="fas fa-download"></i> Download CV
                         </a>
+                        <a target="_blank" rel="noopener noreferrer" href='https://scholar.google.com/citations?user=mdyaDyoAAAAJ&hl=pl&oi=sra' class="cv-button" style="margin-left: 1rem;">
+                            <i class="fas fa-graduation-cap"></i> Google Scholar
+                        </a>
                     </div>
                 </div>
                 
