--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; K. Pytka. Template: <a href="https://html5up.net">HTML5 UP</a> (+own modifications).</p>
+						<p class="copyright">&copy; K. Pytka. Template: <a href="https://html5up.net">HTML5 UP</a> (+lots of my own modifications).</p>
 					</footer>
 
 			</div>
