only two misspellings

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		document.addEventListener('DOMContentLoaded', function() {
 			const typingElement = document.getElementById('typing-name');
 			const finalText = 'Krzysztof Pytka';
-			const misspellings = ['Krystof', 'Kzryzstof', 'Kryzystof'];
+			const misspellings = ['Krystof', 'Kzryzstof'];
 			
 			let currentMisspellingIndex = 0;
 			let currentCharIndex = 0;
