--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <img src="./images/KPytka_bike.jpg" alt="Krzysztof Pytka and Kuki-Muki on a bike ride"/> 
                     </span>
                     <p style="text-align: left; font-style: italic; font-size: 0.9rem; color: #666;">
-                        Me (on the right) and <a target="_blank" rel="noopener noreferrer" href="https://quipo.dog/">Kuki-Muki</a>. 
+                        Me (on the right) and <a target="_blank" rel="noopener noreferrer" href="https://kpytka.github.io/quipo/">Kuki-Muki</a>. 
                     </p>
                 </div>
             </div>
