--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
   title={Looking into the Consumption Black Box: Evidence from Scanner Data},
   author={Krzysztof Pytka and Daniel Runge},
   year={2025},
-  note={Working Paper}
+  note={Working Paper},
+  nameorder = {random}
 }</pre>
 							</div>
 							
