--- a/index.html
+++ b/index.html
@@ -402,6 +402,25 @@
 											<br> e-mail: <a target="_blank" rel="noopener noreferrer"  href="http://scr.im/40rz" title="Reveal this e-mail address">p***@uni-mannheim.de</a>
 										</p>
 										<!-- </address> -->
+										
+										<!-- Google Maps Embed -->
+										<div style="margin-top: 2rem; text-align: center;">
+											<h3 style="margin-bottom: 1rem;">Location</h3>
+											<iframe 
+												src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2595.6504900123456!2d8.4663453!3d49.482411!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797cc188d373f4d%3A0x5d229000a739bd5b!2sL7%2C%2068161%20Mannheim-Quadrate%2C%20Germany!5e0!3m2!1sen!2sde!4v1703000000000!5m2!1sen!2sde"
+												width="100%" 
+												height="300" 
+												style="border:0; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" 
+												allowfullscreen="" 
+												loading="lazy" 
+												referrerpolicy="no-referrer-when-downgrade">
+											</iframe>
+											<p style="margin-top: 1rem; font-size: 0.9rem; color: #666;">
+												<a href="https://maps.google.com/?q=L7,+68161+Mannheim-Quadrate,+Germany" target="_blank" rel="noopener noreferrer">
+													<i class="fa fa-external-link"></i> Open in Google Maps
+												</a>
+											</p>
+										</div>
 								</article>
 
 						<!-- Elements -->
