--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<header id="header">
 						<div class="logo">
 							<img src="images/UNI_MA_Logo_EN_RGB.png" style="height: 5rem;">
+							<!-- <img src="images/edin_logo_color.png" style="height: 6rem;"> -->
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -210,7 +211,7 @@
 									</div>
 									
 									<div class="paper-status">
-										<em>Conditionally Accepted at <i>the Journal of Labor Economics</i></em>
+										<em>Accepted at <i>the Journal of Labor Economics</i></em>
 									</div>
 									
 									<div class="paper-abstract">
