--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@
 							</div>
 							
 							<div id="bibtex-3" style="display: none;">
-								<pre>@article{gulyas_pytka_2024,
+								<pre>@article{gulyas_pytka_2025,
   title={Understanding the Sources of Earnings Losses After Job Displacement: A Machine-Learning Approach},
   author={Andreas Gulyas and Krzysztof Pytka},
-
-  year={2024}
+  journal={Journal of Labor Economics},
+  year={2025}
   
 }</pre>
 							</div>
