--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 										<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Looking_into_the_Consumption_Black_Box.pdf'>
 											<i class="far fa-file-pdf"></i> [PDF]
 										</a>
-										<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Pytka_Consumption_Black_Box___Slides__SED_2025.pdf'>
-											<i class="fas fa-chart-pie"></i> [Slides]
+										<a target="_blank" rel="noopener noreferrer" href='https://kpytka.github.io/Looking_into_the_Consumption_Black_Box___Slides__Edinburgh_2025.pdf'>
+											<i class="fas fa-chart-pie"></i> [120min Slides]
 										</a>
 										<a href="#" onclick="showBibtex('bibtex-1'); return false;">
 											<i class="fas fa-quote-left"></i> [BibTeX]
