--- a/index copy 2.html
+++ b/index copy 2.html
@@ -415,11 +415,11 @@
 										<div style="margin-top: 2rem; text-align: center;">
 											<h3 style="margin-bottom: 1rem;">Location</h3>
 
-											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2234.362619539787!2d-3.1885225222407056!3d55.94308667731769!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c783b8c16ca3%3A0xe47294024c33a790!2sSchool%20of%20Economics!5e0!3m2!1sen!2suk!4v1770804652280!5m2!1sen!2suk" width="100%" height="300" style="border:0; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4468.724743411146!2d-3.1884566228418216!3d55.943090973155144!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4887c783b93865dd%3A0x7ea9dac331906252!2s31%20Buccleuch%20Pl%2C%20Edinburgh%20EH8%209JS%2C%20UK!5e0!3m2!1sen!2sde!4v1770740591381!5m2!1sen!2sde" width="100%" height="300" style="border:0; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 											
 											<p style="margin-top: 1rem; font-size: 0.9rem; color: #666;">
-												<a href="https://maps.app.goo.gl/bhm8For63ns3XpsK9" target="_blank" rel="noopener noreferrer">
+												<a href="https://maps.app.goo.gl/wCQzJ2jCCoyfNa2D9" target="_blank" rel="noopener noreferrer">
 													<i class="fa fa-external-link"></i> Open in Google Maps
 												</a>
 											</p>
